--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon-yellow.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SE '30 Webring</title>
     <meta name="description" content="A webring for Software Engineering class of 2030 students at the University of Waterloo.">
